--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   dio: ^5.8.0+1
   injectable:
   get_it:
+  dartz: ^0.10.1
+  flutter_bloc: ^9.1.0
+  shared_preferences: ^2.5.3
+  connectivity_plus: ^6.1.3
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +40,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
     - assets/icons/
     - assets/svg_images/
 
