--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.5.3
   connectivity_plus: ^6.1.3
   flutter_dotenv: ^5.2.1
+  cached_network: ^2.1.0
 
 dev_dependencies:
   flutter_test:
