--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   connectivity_plus: ^6.1.3
   flutter_dotenv: ^5.2.1
   cached_network: ^2.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
